[package]
name = "ordered-multimap"
version = "0.4.3"
authors = ["Scott Godwin <sgodwincs@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/sgodwincs/ordered-multimap-rs"
description = "Insertion ordered multimap"
readme = "README.md"
categories = ["data-structures"]

[dependencies]
dlv-list = "0.3.0"
hashbrown = "0.12.0"
serde = { version = "1", optional = true }
