[package]
name = "ordered-multimap"
version = "0.7.4"
authors = ["Scott Godwin <sgodwincs@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/sgodwincs/ordered-multimap-rs"
description = "Insertion ordered multimap"
readme = "README.md"
categories = ["data-structures"]
rust-version = "1.71.1"

[dependencies]
dlv-list = { version = "0.5", default-features = false }
hashbrown = { version = "0.15.2", default-features = false }
serde = { version = "1", optional = true, default-features = false }

[features]
default = ["std"]
std = ["dlv-list/std"]

[dev-dependencies]
coverage-helper = "0.2.0"
serde_test = "1.0.144"
